--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <version>3.0-alpha-1</version>
         </dependency>
 
+        <!-- 日志再 -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>springmvc-test</finalName>
