--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <version>3.0-alpha-1</version>
         </dependency>
 
+        <!-- fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+
         <!-- 日志再 -->
         <dependency>
             <groupId>log4j</groupId>
