--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>springmvc-test</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>springmvc-test Maven Webapp</name>
+    <name>springmvc-test</name>
     <url>http://maven.apache.org</url>
 
     <properties>
